# Project_3_Search_vacancies_db_conn

./: .env example  .gitignore  README.md  main.py  pyproject.toml
classe/: db_manager.py  hh_parser.py
src/: api_handler.py  db_manager.py  file_handler.py  main.py
utils/: utils.py
