[tool.poetry]
name = "project-3-search-vacancies-db-conn"
version = "0.1.0"
description = ""
authors = ["alex <mmclinks.ml@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
postgres = "^4.0"
types-psycopg2 = "^2.9.21.20240819"
types-requests = "^2.32.0.20240914"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"


[tool.poetry.group.lint.dependencies]
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.isort]
# максимальная длина строки
line_length = 119